methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getCouleurSol()==Color.green){
    ^SlugTracking:11: error: return outside method definition
  return false
  ^